@@ -1,3 +1,8 @@
+2008-05-07  William Jon McCann  <jmccann@redhat.com>
+
+	* schemas/desktop_gnome_lockdown.schemas.in:
+	Add disable_application_handlers lockdown.
+
 2008-04-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/*.*: Include headers from srcdir over
